; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-netpack.c_clear_list.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-netpack.c_clear_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uncomplete = type { %struct.uncomplete*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uncomplete*)* @clear_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_list(%struct.uncomplete* %0) #0 {
  %2 = alloca %struct.uncomplete*, align 8
  %3 = alloca i8*, align 8
  store %struct.uncomplete* %0, %struct.uncomplete** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.uncomplete*, %struct.uncomplete** %2, align 8
  %6 = icmp ne %struct.uncomplete* %5, null
  br i1 %6, label %7, label %20

7:                                                ; preds = %4
  %8 = load %struct.uncomplete*, %struct.uncomplete** %2, align 8
  %9 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 @skynet_free(i8* %11)
  %13 = load %struct.uncomplete*, %struct.uncomplete** %2, align 8
  %14 = bitcast %struct.uncomplete* %13 to i8*
  store i8* %14, i8** %3, align 8
  %15 = load %struct.uncomplete*, %struct.uncomplete** %2, align 8
  %16 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %15, i32 0, i32 0
  %17 = load %struct.uncomplete*, %struct.uncomplete** %16, align 8
  store %struct.uncomplete* %17, %struct.uncomplete** %2, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = call i32 @skynet_free(i8* %18)
  br label %4

20:                                               ; preds = %4
  ret void
}

declare dso_local i32 @skynet_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
